# pysimoa

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  about-include.html  about.html  authors.html  autodocs.sh  autotest.sh  changelog.html  developer.html  dodo.py  index.html  license.html  objects.inv  pytest.ini  reference.html  requirements-dev.txt  requirements-doc.txt  search.html  searchindex.js  setup.cfg  setup.html  setup.py  tox.ini  toxdev.ini  tutorial.html  user.html  versioneer.py  zbib.html
_modules/: index.html
_modules/simoa/: mser.html  nskart.html  stats.html
_rst/: modules.html  simoa.html
_sources/: about.txt  changelog.txt  developer.txt  index.txt  setup.txt
_sources/_rst/: modules.txt  simoa.txt
docs/: Makefile  about-include.rst  about.rst  changelog.rst  conf.py  developer.rst  index.rst  pysimoa.bib  reference.rst  zbib.rst
simoa/: __init__.py  _version.py  mser.py  nskart.py  stats.py
simoa/test/: test_mser.py  test_nskart.py  test_stats.py
tests/: mser_test.py  nskart_test.py
