[metadata]
description = Scientific Python package for Simulation Output Analysis
author = Andreas Sorge
author_email = pysimoa@asorge.de
license = apache
url =
# Comma separated list of data INSIDE your package to include.
# DO NOT prepend the package name when specifying files and folders.
package_data = 
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 3 - Alpha,
    License :: OSI Approved :: Apache Software License,
    Programming Language :: Python,
    Programming Language :: Python :: 2.7,
    Programming Language :: Python :: 3.4,
    Topic :: Scientific/Engineering,
    Intended Audience :: Science/Research


[data_files]
# Add here data to be included which lies OUTSIDE your package, e.g.
# path/to/destination = files/to/include, others/to/include
# This is the same as adding files to MANIFEST.in which is not needed anymore.
# The destination is relative to the root of your virtual environment.
# Use ** as wildcard if you want to recursively include a pattern, e.g.
# tests/**.py would include all py-files in all subfolders of tests.

[extras_require]
# Add here additional requirements for extra features, like:
# PDF = ReportLab>=1.2, RXP

[aliases]
test = pytest

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
